# tiny-irc-rs

./: Cargo.toml
.github/workflows/: build_windows.yml  ci.yml
doc/: search-index.js  settings.html
doc/implementors/core/panic/unwind_safe/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
doc/implementors/message/: trait.Message.js
doc/message/: trait.Message.html
docs/: crates.js  source-files.js
docs/implementors/core/marker/: trait.Freeze.js  trait.Send.js  trait.Sync.js  trait.Unpin.js
docs/message/: all.html  index.html  sidebar-items.js  struct.ParsedMessage.html
docs/src/message/: message.rs.html
src/: lib.rs  main.rs  message.rs  parser.rs  read_parser.rs
src/message/: mod.rs  prelude.rs  traits.rs  util.rs
src/read_parser/: message.rs
