[package]
name = "tiny-irc"
version = "0.1.0"
edition = "2021"

[dependencies]
smallvec = "1.8.0"
memchr = "2.4"

[profile.release]
# strip = true
# opt-level = 'z' # Optimize for size.
lto = true # Enable Link Time Optimization
codegen-units = 1 # Reduce number of codegen units to increase optimizations.
panic = 'abort' # Abort on panic
